Fixed clang compilation issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,9 @@
 		"cstring": "cpp",
 		"sstream": "cpp",
 		"ctime": "cpp",
-		"csignal": "cpp"
+		"csignal": "cpp",
+		"optional": "cpp",
+		"ranges": "cpp",
+		"span": "cpp"
 	}
 }
